--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
+    androidExtensions {
+        experimental = true
+    }
+
 }
 
 dependencies {
@@ -40,4 +49,23 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
 
+    // koin
+    implementation "org.koin:koin-core:2.1.5"
+    implementation "org.koin:koin-core-ext:2.1.5"
+    implementation "org.koin:koin-android:2.1.5"
+    implementation "org.koin:koin-android-scope:2.1.5"
+    implementation "org.koin:koin-android-viewmodel:2.1.5"
+    implementation "org.koin:koin-android-ext:2.1.5"
+
+    // coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+
+    // groupie
+    implementation "com.xwray:groupie:2.8.0"
+    implementation "com.xwray:groupie-databinding:2.8.0"
+    implementation "com.xwray:groupie-kotlin-android-extensions:2.8.0"
+
+    // navigation
+    implementation "android.arch.navigation:navigation-fragment-ktx:2.3.0-alpha05"
+    implementation "android.arch.navigation:navigation-ui-ktx:2.3.0-alpha05"
 }
