--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
 
     // groupie
-    implementation "com.xwray:groupie:2.8.0"
-    implementation "com.xwray:groupie-databinding:2.8.0"
-    implementation "com.xwray:groupie-kotlin-android-extensions:2.8.0"
+    // https://github.com/lisawray/groupie/issues/333
+    //    implementation "com.xwray:groupie:2.8.0"
+    //    implementation "com.xwray:groupie-viewbinding:2.8.0"
+    //    implementation "com.xwray:groupie-kotlin-android-extensions:2.8.0"
+    implementation "com.github.lisawray.groupie:groupie:2.8.0"
+    implementation "com.github.lisawray.groupie:groupie-viewbinding:2.8.0"
+    implementation "com.github.lisawray.groupie:groupie-kotlin-android-extensions:2.8.0"
 
     // navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:2.3.0-alpha05"
