--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,9 @@ dependencies {
     // navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:2.3.0-alpha05"
     implementation "android.arch.navigation:navigation-ui-ktx:2.3.0-alpha05"
+
+    // material-dialogs
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
+    implementation 'com.afollestad.material-dialogs:input:3.3.0'
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
 }
