--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 29
@@ -32,6 +33,15 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -39,26 +49,36 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     // test
-    implementation "androidx.test:runner:1.2.0"
-    implementation "androidx.test:rules:1.2.0"
-    implementation "androidx.test:core:1.2.0"
+    implementation "androidx.test:runner:1.3.0"
+    implementation "androidx.test:rules:1.3.0"
+    implementation "androidx.test:core:1.3.0"
     implementation "junit:junit:4.12"
     implementation "com.google.truth:truth:1.0.1"
-    implementation "androidx.test.ext:truth:1.2.0"
-    implementation "androidx.test.espresso:espresso-core:3.2.0"
-    implementation "androidx.test.espresso:espresso-contrib:3.2.0"
+    implementation "androidx.test.ext:truth:1.3.0"
+    implementation "androidx.test.espresso:espresso-core:3.3.0"
+    implementation "androidx.test.espresso:espresso-contrib:3.3.0"
 
     // room
     kapt 'androidx.room:room-compiler:2.2.5'
     implementation "androidx.room:room-runtime:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5"
+
+
+    // daggerHilt
+    implementation "com.google.dagger:hilt-android:2.29.1-alpha"
+    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
+    kapt "com.google.dagger:hilt-compiler:2.29.1-alpha"
+    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
+    kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
 
     // koin
     implementation "org.koin:koin-core:2.1.5"
