--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "com.google.protobuf" version "0.8.12"
+}
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -89,7 +92,7 @@ dependencies {
     implementation "org.koin:koin-android-ext:2.1.5"
 
     // coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
 
     // groupie
     // https://github.com/lisawray/groupie/issues/333
@@ -109,4 +112,28 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
 
+    // proto Datastore
+    implementation "androidx.datastore:datastore-core:1.0.0-alpha01"
+    implementation "com.google.protobuf:protobuf-javalite:3.10.0"
+
+    // material
+    implementation "com.google.android.material:material:1.2.1"
+
+    // material spinner
+    implementation "com.jaredrummler:material-spinner:1.3.1"
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.10.0"
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
 }
