--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,9 @@ dependencies {
 
     // material spinner
     implementation "com.jaredrummler:material-spinner:1.3.1"
+
+    // mockK
+    testImplementation "io.mockk:mockk:1.10.0"
 }
 
 protobuf {
