--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,12 @@ dependencies {
 
     // mockK
     testImplementation "io.mockk:mockk:1.10.0"
+
+    // kotlinx-coroutines-test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+
+    // for livedata test
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 }
 
 protobuf {
