--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:input:3.3.0'
     implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
 
+    implementation "com.github.arimorty:floatingsearchview:2.1.1"
 }
