--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,9 @@ dependencies {
 
     // for livedata test
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    implementation project(":data")
+    implementation project(":model")
 }
 
 protobuf {
