--- a/editsong/build.gradle
+++ b/editsong/build.gradle
@@ -1,7 +1,4 @@
-plugins {
-    id "com.google.protobuf" version "0.8.12"
-}
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
@@ -13,13 +10,13 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "me.index197511.mysongbank"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -132,21 +129,4 @@ dependencies {
 
     implementation project(":data")
     implementation project(":model")
-    implementation project(":editsong")
-    implementation project(":songlist")
-}
-
-protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.10.0"
-    }
-    generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-                java {
-                    option 'lite'
-                }
-            }
-        }
-    }
 }
