[WIP] create router module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     implementation project(":model")
     implementation project(":editsong")
     implementation project(":songlist")
+    implementation project(":router")
 }
 
 protobuf {
