--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
@@ -39,32 +38,36 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation deps.kotlin.stdlib
+
+    // androidx
+    implementation deps.androidx.core
+
+    // test
+    testImplementation deps.test.androidx_test_runner
+    testImplementation deps.test.androidx_test_rules
+    testImplementation deps.test.androidx_test_core
+    testImplementation deps.test.truth
+    testImplementation deps.test.truth_ext
 
     // proto Datastore
-    implementation "androidx.datastore:datastore-core:1.0.0-alpha01"
-    implementation "com.google.protobuf:protobuf-javalite:3.10.0"
+    implementation deps.proto_data_store.core
+    implementation deps.proto_data_store.proto_buf
 
     // coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    implementation deps.coroutines.core
 
     // room
-    kapt 'androidx.room:room-compiler:2.2.5'
-    implementation "androidx.room:room-runtime:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
+    kapt deps.room.compiler
+    implementation deps.room.runtime
+    implementation deps.room.ktx
 
     // daggerHilt
-    implementation "com.google.dagger:hilt-android:2.29.1-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "com.google.dagger:hilt-compiler:2.29.1-alpha"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
-    kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
+    implementation deps.dagger_hilt.android
+    implementation deps.dagger_hilt.common
+    kapt deps.dagger_hilt.compiler
+    kapt deps.dagger_hilt.androidx_compiler
+    kapt deps.dagger_hilt.android_compiler
 
     implementation project(":model")
 }
