--- a/router/build.gradle
+++ b/router/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'kotlin-kapt'
@@ -29,23 +28,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation deps.kotlin.stdlib
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:2.3.0-alpha05"
-    implementation "android.arch.navigation:navigation-ui-ktx:2.3.0-alpha05"
+    // dagger_hilt
+    implementation deps.dagger_hilt.android
+    implementation deps.dagger_hilt.common
+    implementation deps.dagger_hilt.viewmodel
+    kapt deps.dagger_hilt.compiler
+    kapt deps.dagger_hilt.androidx_compiler
+    kapt deps.dagger_hilt.android_compiler
 
-    // daggerHilt
-    implementation "com.google.dagger:hilt-android:2.29.1-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha02"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02"
-    kapt "com.google.dagger:hilt-compiler:2.29.1-alpha"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha02"
-    kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
+    // navigation
+    implementation deps.navigation.fragment_ktx
+    implementation deps.navigation.ui_ktx
 
     implementation project(":editsong")
     implementation project(":songlist")
