add function of closing keyboard

--- a/common_feature/build.gradle
+++ b/common_feature/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'dagger.hilt.android.plugin'
-apply plugin: "androidx.navigation.safeargs"
-apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
@@ -37,21 +35,5 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation deps.kotlin.stdlib
-
-    // dagger_hilt
-    implementation deps.dagger_hilt.android
-    implementation deps.dagger_hilt.common
-    implementation deps.dagger_hilt.viewmodel
-    kapt deps.dagger_hilt.compiler
-    kapt deps.dagger_hilt.androidx_compiler
-    kapt deps.dagger_hilt.android_compiler
-
-    // navigation
-    implementation deps.navigation.fragment_ktx
-    implementation deps.navigation.ui_ktx
-
-    implementation project(":feature:editsong")
-    implementation project(":feature:songlist")
-    implementation project(":model")
-
+    implementation deps.androidx.fragment
 }
